# cppsnippets

./: CMakeLists.txt  README.md
include/constcast/: constcast.hpp
scripts/: format.sh
src/constcast/: main.cpp
